--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,10 @@ trigger:
 pool:
   vmImage: 'Ubuntu-16.04'
 
+variables:
+  engineDir: '$(build.artifactStagingDirectory)\uhexen2\engine\hexen2\\'
+
 steps:
 - script: |
-    make glh2 W32BUILD=1
+    make glh2 W32BUILD=1 -C $(engineDir)
   displayName: 'make'
