--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 variables:
-  engineDir: '$(build.artifactStagingDirectory)/engine/hexen2'
+  engineDir: 'engine/hexen2'
 
 steps:
 - script: |
